@@ -3,7 +3,6 @@ package dao;
 import models.Product;
 import models.Size;
 
-import java.sql.SQLException;
 import java.util.List;
 
 public class SizeDAO {
@@ -55,7 +54,7 @@ public class SizeDAO {
 
     public void deleteSizeList(List<Integer> listId) {
         StringBuilder idRange = new StringBuilder();
-        if (listId.size() == 1) idRange.append(listId.get(0));
+        if (listId.size() == 1) idRange.append(listId.getFirst());
         else
             for (int i = 0; i < listId.size(); i++) {
                 idRange.append(listId.get(i));
